# logicalworks-

./: .gitattributes  .gitignore  CLAUDE.md  HARDEN-NOTES-expression-v1.md  HARDEN-NOTES.md  Makefile  README.md  command_inj_test.py  findings_final.json  findings_new.json  handoff.spawn.json  install.sh  lfi_test.py  lgwks  lgwks-akinator  lgwks.profile.json  lgwks_access.py  lgwks_admission.py  lgwks_admission_store.py  lgwks_agent.py  lgwks_agent_os.py  lgwks_apple.py  lgwks_artifact_tokenized.py  lgwks_audit.py  lgwks_audit_graph.py  lgwks_aup.py  lgwks_auth_runtime.py  lgwks_axiom.py  lgwks_batch.py  lgwks_bot_code_hacker.py  lgwks_bot_optimizer.py  lgwks_bot_slop_math.py  lgwks_bot_stress.py  lgwks_browser.py  lgwks_bulk_harvest.py  lgwks_cache.py  lgwks_capabilities.py  lgwks_capability.py  lgwks_capability_action.py  lgwks_capture.py  (+158 more)
.keel/: _chain.jsonl  manifest-31d627fd5d05b2890213c089fa9109d42a196643.json  manifest-4d2365545e1960721769a75b9f709d75e2f938cb.json  manifest-53a57a9e9a11190637b8c514ec165f60108b6ee3.json  manifest-6858c1545c2f9d740fdadebeef3731bfc3efa6de.json  manifest-8cb97c9a208776918aea7e054ef2e9aecb8e1b80.json  manifest-928c6caeb5c911cc9c08f2c983f842d258ca131a.json  manifest-b5e0237e05ac36b9bac7a803f113dbf43762c3f3.json  projection-ai-31d627fd5d05b2890213c089fa9109d42a196643.json  projection-ai-4d2365545e1960721769a75b9f709d75e2f938cb.json  projection-ai-53a57a9e9a11190637b8c514ec165f60108b6ee3.json  projection-ai-6858c1545c2f9d740fdadebeef3731bfc3efa6de.json  projection-ai-8cb97c9a208776918aea7e054ef2e9aecb8e1b80.json  projection-ai-928c6caeb5c911cc9c08f2c983f842d258ca131a.json  projection-ai-b5e0237e05ac36b9bac7a803f113dbf43762c3f3.json  projection-symbolic-31d627fd5d05b2890213c089fa9109d42a196643.json  projection-symbolic-4d2365545e1960721769a75b9f709d75e2f938cb.json  projection-symbolic-53a57a9e9a11190637b8c514ec165f60108b6ee3.json  projection-symbolic-6858c1545c2f9d740fdadebeef3731bfc3efa6de.json  projection-symbolic-8cb97c9a208776918aea7e054ef2e9aecb8e1b80.json  projection-symbolic-928c6caeb5c911cc9c08f2c983f842d258ca131a.json  projection-symbolic-b5e0237e05ac36b9bac7a803f113dbf43762c3f3.json
archive/: README.md
axiom/: __init__.py  capsule.py  cid.py  fabric.py  varint.py  verify.py  wire.py
crawler/: Cargo.toml
crawler/src/: api.rs  chunk.rs  config.rs  dedup.rs  engine.rs  error.rs  extract.rs  fetch.rs  fingerprint.rs  frontier.rs  gather.rs  lib.rs  main.rs  media.rs  politeness.rs  robots.rs  schema.rs
docs/: 24h-reconstruction.md  ADR-pipeline-001-tuning.md  ADR-sast-001-agnostic-graph.md  ADR-sast-002-zero-trust-pipeline.md  ADR-sast-003-liquid-brain.md  AETHERIUS_SPEC_2026.md  ARCHITECTURE.md  AUTHORITY.md  CODEBASE-EXTRACTION-OBS-2026-06-24.md  CODEBASE_SCHEMA.yaml  DAEMON-CORE-PLAN.md  ESCALATION-LADDER-LAW.md  FRONTIER-CHECKLIST-OBS-2026-06-24.md  HANDBOOK.md  NAVMAP.md  OPERATING-MODEL.md  REALWORLD-EXTRACT-EVAL-2026-06-24.md  SPEC-tier-e-machine-model-v1.md  UNDERSTANDING.md  axiom-end-to-end-framework-2026-06-06.md  cli-jepa-portal-foundation-2026-06-06.md  data-model.mmd  guardrail-aup-event-note.md  handoff-cli-ergonomics-2026-06-15.md  handoff-graph-gh-fixes-2026-06-05.md  handoff-ingestion-compression-axiom-2026-06-22.md  handoff-ml-hardening-2026-06-06.md  handoff-repo-cleanup-2026-06-02.md  handoff-unified-state-fabric-db-2026-06-15.md  index.md  issues-jepa-backlog-2026-06-06.md  jarvis-crawl-substrate-bridge.md  jepa-logic-os-alignment-2026-06-06.md  jepa-scientific-approach-2026-06-06.md  jepa-ticket-schema-2026-06-06.md  lgwks-expression-v1-spec.md  log.md  machine-nervous-system.md  membrane-engine-thesis.md  ml-001-intent-classifier-sizing.md  (+13 more)
engine/: DEPRECATIONS.md  (+6 more)
lgwks-human/: Cargo.toml
lgwks-human/src/: app.rs  bridge.rs  main.rs  tui.rs  util.rs
lgwks-human/src/screens/: chat.rs  flight.rs  mod.rs  queue.rs  runs.rs  wire.rs
lgwks-human/src/ui/: command_palette.rs  confirm_overlay.rs  help_overlay.rs  mod.rs
lgwks-human/tests/fixtures/: context_packet_v1.json
lgwks-video/: Cargo.toml
lgwks-video/src/: main.rs
tui/: Cargo.toml
tui/src/: db.rs  main.rs  models.rs
(+800 files in other folders)
