[package]
name = "lgwks-human"
version = "0.1.0"
edition = "2021"
description = "Human control surface for the lgwks daemon — flight control display for STEM tasks"
license = "LGPL-3.0"

[[bin]]
name = "lgwks-human"
path = "src/main.rs"

[dependencies]
# TUI stack — same versions as existing tui/ crate
ratatui          = "0.30.0"
crossterm        = { version = "0.28.1", features = ["event-stream"] }
color-eyre       = "0.6"

# Async runtime (rainfrog pattern)
tokio            = { version = "1.43", features = ["full"] }
tokio-util       = "0.7"
futures          = "0.3"

# DB + serialization — copied from existing tui/
rusqlite         = { version = "0.32.0", features = ["bundled"] }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
chrono           = { version = "0.4", features = ["serde"] }
# CLI
clap             = { version = "4.5", features = ["derive"] }

# Input widget — from existing tui/
tui-input        = "0.11"

# Logging (rainfrog uses this, keeps terminal clean)
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
itertools        = "0.14"
strum            = { version = "0.26", features = ["derive"] }
