[package]
name = "lgwks-human"
version = "0.1.0"
edition = "2021"
description = "Human control surface for the lgwks daemon — flight control display for STEM tasks"
license = "LGPL-3.0"

[[bin]]
name = "lgwks-human"
path = "src/main.rs"

[dependencies]
ratatui          = "0.30.0"
crossterm        = { version = "0.28.1", features = ["event-stream"] }
color-eyre       = "0.6"
tokio            = { version = "1.43", features = ["full"] }
tokio-util       = "0.7"
futures          = "0.3"
rusqlite         = { version = "0.32.0", features = ["bundled"] }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
chrono           = { version = "0.4", features = ["serde"] }
clap             = { version = "4.5", features = ["derive"] }
tui-input        = "0.11"
tracing          = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
itertools        = "0.14"
strum            = { version = "0.26", features = ["derive"] }
rand = "0.10.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
