[package]
name = "lgwks-video"
version = "0.1.0"
edition = "2021"
description = "LogicalWorks Video (lgwks-video) - Proprietary foldable video intermediate pipeline"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
