[package]
name = "lgwks-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.30.0"
crossterm = "0.28.1"
color-eyre = "0.6"
rusqlite = { version = "0.32.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
tui-input = "0.11"
itertools = "0.14"
